# roman_numeral_converter

./: .gitignore  README.md  pyproject.toml
roman_numeral_converter/: atomic_conversions.py  stack_conversions.py
tests/: convert_atomic_roman_numeral_to_number_test.py  convert_number_list_to_stack_test.py  convert_number_to_atomic_roman_numeral_test.py  convert_stack_to_number_list_test.py  stack_number_list_decode_encode_test.py
tests/atomic_conversion_test/: atomic_conversion_encoder_decoder_integration_test.py  convert_atomic_roman_numeral_to_number_test.py  convert_number_to_atomic_roman_numeral_test.py  validate_atomic_roman_numeral_test.py  validate_number_for_atomic_conversion_test.py
