[tool.poetry]
name = "roman-numeral-converter"
version = "0.1.0"
description = ""
authors = ["Emily Ingram <lmingram@ualberta.ca>"]
readme = "README.md"
packages = [{include = "roman_numeral_converter"}]

[tool.poetry.dependencies]
python = "^3.10"
toolz = "^0.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipython = "^8.13.2"
hypothesis = "^6.75.3"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
